@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-08-05  Dirk Schulze  <dschulze@adobe.com>
+- Clarify lacuna values for filter shorthands.
+- Fix a bug with drop-shadow syntax.
+
 2013-07-16  Dirk Schulze  <dschulze@adobe.com>
 - Be more explicit on parsing instructions for filter functions.
 
